--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "industri-standard-follow",
   "version": "1.0.0",
   "description": "follow all industri standard",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": " nodemon src/index.js "
   },
   "keywords": [
     "javascript",
@@ -12,5 +13,8 @@
     "chai"
   ],
   "author": "Dipesh Patidar",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
